| Bug #15685 | Incorrect abort handling in case of timeout during abort | ||
|---|---|---|---|
| Submitted: | 12 Dec 2005 16:51 | Modified: | 15 Dec 2005 13:07 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1,5.0,5.1 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[12 Dec 2005 16:51]
Jonas Oreland
[12 Dec 2005 17:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/33212
[13 Dec 2005 14:58]
Jonas Oreland
pushed into 5.0.18 (not yet in 4.1)
[14 Dec 2005 7:35]
Jonas Oreland
pushed into 4.1.17
[15 Dec 2005 13:07]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 4.1.17 and 5.0.18 changelogs.
[20 Dec 2005 9:10]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/33282
