ndb - bug#15685   Error in abort handling in TC when timeout during abort

ndb/src/kernel/blocks/ERROR_codes.txt:
  New error codes
ndb/src/kernel/blocks/dblqh/DblqhMain.cpp:
  New error codes
ndb/src/kernel/blocks/dbtc/DbtcMain.cpp:
  Dont release transaction record to early
ndb/test/ndbapi/testNodeRestart.cpp:
  Test case
ndb/test/run-test/daily-basic-tests.txt:
  Test case